syntax = "proto3";
import "base.proto";
option go_package = "pkg/proto";

message CPushRequest {
  BaseKey key = 1;
  repeated string value = 2;
}

message CPushResponse {
  External e = 1;
}

message CPopRequest {
  BaseKey key = 1;
  int32 count = 2;
}

message CPopResponse {
  External e = 1;
  repeated string result = 2;
}

message CMakeRequest {
  BaseKey key = 1;
  int32 length = 2;
}

message CMakeResponse {
}

message CLenRequest {
  BaseKey key = 1;
}

message CLenResponse {
  int32 length = 2;
}

message CCleanRequest {
  BaseKey key = 1;
}

message CCleanResponse {
}
